estilo.css
:root{--primary:#005599,--dark:#33;--light:#f4f4f4;}
body {font-family:sans-serif;margin:0;background:var(--dark);}
nav {background:var(--primaru);padding:1rem, display:flex,justify-content:space-around;}
nav a {color:white;text-decoration:none;font-weight:bold;}
.container {padding:2rem;max-width:800px;margin:auto;}
.card {background:white;padding:1.5rem;border-radius:8px;box-shadow:02px 5px rgba(0,0,0,0.1);}
imput,select,button{width:100%;padding:0.8rem;margin:0.5rem 0;border: 1px solid#ccc;border-radius:
  4px;box-sizing:border-box;}
button {background:var(--primary);color:white; border:none;curso:pointer;font-size:1rem;}
table {width:100%;border-collapse;margin-top:1rem;}
th,td {border-bottom:1px solid#ddd#padding:10px;text-align:left;}

.banner{
  background:linear-gradiente(rgba(0,85,153,0,8),rgba(0,85,153,0,8)),url('imagens\senai.png');
  background-size:cover;
  color:white;
  padding:30px20px;
  text-align:cente;
  margin-bottom:10px;
}
.banner h1{
  margin: 0;
  font-size:2.5rem;
}
/*Estilo do Rodapé*/
.rodapé{
  background-color:#333;
  color:white;
  text-align:center;
  padding:20px0;
  margin-top:50px;/*Garante distândia do conteúdo superior*/
width:100%;
}

